syntax = "proto3";

option csharp_namespace = "Product.Api.Protos";

service ProductProtoService {
  rpc GetById (GetByIdRequest) returns (GetByIdResponse);
}

message GetByIdRequest {
  int32 ProductId = 1;
}

message GetByIdResponse {
  int32 Id = 1;
  string Code = 2;
  string Name = 3;
  bool IsSignature = 4;
}